--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,16 @@ distlib==0.3.9
 filelock==3.18.0
 greenlet==3.2.2
 identify==2.6.10
+iniconfig==2.1.0
 isort==6.0.1
 mccabe==0.7.0
 nodeenv==1.9.1
+packaging==25.0
 platformdirs==4.3.7
+pluggy==1.5.0
 pre_commit==4.2.0
 pylint==3.3.6
+pytest==8.3.5
 PyYAML==6.0.2
 SQLAlchemy==2.0.40
 tomlkit==0.13.2
