feat: Implementing person_creator_controller with tests

--- a/.pylintrc
+++ b/.pylintrc
@@ -7,6 +7,9 @@ disable=
       W0703, # broad-except
       C0209, # string-containers
       E0015, # no-else-raise
+      W0719, # broad-exception-raised
+      W0611, # unused-import,
+      F401,
 
 # Analyse import fallback blocks. This can be used to support both Python 2 and
 # 3 compatible code, which means that the block might have code that exists
