--- a/.pylintrc
+++ b/.pylintrc
@@ -8,8 +8,7 @@ disable=
       C0209, # string-containers
       E0015, # no-else-raise
       W0719, # broad-exception-raised
-      W0611, # unused-import,
-      F401,
+      W0611, # unused-import
 
 # Analyse import fallback blocks. This can be used to support both Python 2 and
 # 3 compatible code, which means that the block might have code that exists
