feat: Implementing pet_list_controller  with tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "**/.pyc": {"when": "$(basename).py"},
     "**/__pycache__": true,
     "**/.pytest_cache": true,
-    "**/__init__.py": true,
-  }
+    "**/__init__.py": false,
+  },
+  "python.autoComplete.extraPaths": []
 }
