--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pluggy==1.5.0
 pre_commit==4.2.0
 pylint==3.3.6
 pytest==8.3.5
+pytest-mock==3.14.0
 PyYAML==6.0.2
 SQLAlchemy==2.0.40
 tomlkit==0.13.2
