--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,19 @@
 astroid==3.3.9
+blinker==1.9.0
 cfgv==3.4.0
+click==8.2.1
 dill==0.4.0
 distlib==0.3.9
 filelock==3.18.0
+Flask==3.1.1
+flask-cors==6.0.0
 greenlet==3.2.2
 identify==2.6.10
 iniconfig==2.1.0
 isort==6.0.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
 mccabe==0.7.0
 mock-alchemy==0.2.6
 nodeenv==1.9.1
@@ -22,3 +29,4 @@ SQLAlchemy==2.0.40
 tomlkit==0.13.2
 typing_extensions==4.13.2
 virtualenv==20.31.0
+Werkzeug==3.1.3
