--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 astroid==3.3.9
 blinker==1.9.0
 cfgv==3.4.0
@@ -21,12 +22,15 @@ packaging==25.0
 platformdirs==4.3.7
 pluggy==1.5.0
 pre_commit==4.2.0
+pydantic==2.11.5
+pydantic_core==2.33.2
 pylint==3.3.6
 pytest==8.3.5
 pytest-mock==3.14.0
 PyYAML==6.0.2
 SQLAlchemy==2.0.40
 tomlkit==0.13.2
+typing-inspection==0.4.1
 typing_extensions==4.13.2
 virtualenv==20.31.0
 Werkzeug==3.1.3
